fix: add aliases to old pages for compatibility with old urls

--- a/content/posts/00011_HDU 1003 Max sum.md
+++ b/content/posts/00011_HDU 1003 Max sum.md
@@ -1,6 +1,8 @@
 ---
 title: HDU 1003 Max sum——分治法的应用，动态规划，前缀数组
 id: 11
+aliases:
+  - /blog/11/
 categories:
   - HDU
 date: 2017-12-06T23:10:33+08:00
