--- a/content/posts/00024_一道抓小偷的OJ题，不用数组实现，遗憾位移以后没有赋值，在此记下.md
+++ b/content/posts/00024_一道抓小偷的OJ题，不用数组实现，遗憾位移以后没有赋值，在此记下.md
@@ -1,6 +1,8 @@
 ---
 title: 一道抓小偷的OJ题，不用数组实现，遗憾位移以后没有赋值，在此记下
 id: 24
+aliases:
+  - /blog/24/
 categories:
   - C/C++
 date: 2017-12-09T12:26:58+08:00
