fix: modify tags and categories

--- a/content/posts/00011_HDU 1003 Max sum.md
+++ b/content/posts/00011_HDU 1003 Max sum.md
@@ -4,9 +4,11 @@ id: 11
 aliases:
   - /blog/11/
 categories:
-  - HDU
+  - Algorithm
 date: 2017-12-06T23:10:33+08:00
 tags:
+  - HDU
+  - 分治法
 ---
 
 原题： [http://acm.hdu.edu.cn/showproblem.php?pid=1003](http://acm.hdu.edu.cn/showproblem.php?pid=1003)
