--- a/content/posts/00014_HDU 1325 1272 并查集判断有向图和无向图是否构成一棵树型.md
+++ b/content/posts/00014_HDU 1325 1272 并查集判断有向图和无向图是否构成一棵树型.md
@@ -4,9 +4,11 @@ id: 14
 aliases:
   - /blog/14/
 categories:
-  - HDU
+  - Algorithm
 date: 2018-02-09T16:49:34+08:00
 tags:
+  - HDU
+  - 图
 ---
 
 [HDU 1325](http://acm.hdu.edu.cn/showproblem.php?pid=1325)
