--- a/content/posts/00015_HDU 2089的类似题（62换成了38） 数位dp解释.md
+++ b/content/posts/00015_HDU 2089的类似题（62换成了38） 数位dp解释.md
@@ -4,9 +4,12 @@ id: 15
 aliases:
   - /blog/15/
 categories:
-  - 算法
+  - Algorithm
 date: 2018-01-28T23:41:21+08:00
 tags:
+  - HDU
+  - nowcoder
+  - 数位dp
 ---
 
 
