--- a/content/posts/00025_两大LCS问题.md
+++ b/content/posts/00025_两大LCS问题.md
@@ -4,9 +4,10 @@ id: 25
 aliases:
   - /blog/25/
 categories:
-  - 算法
+  - Algorithm
 date: 2018-02-01T12:09:09+08:00
 tags:
+  - LCS
 ---
 
 ## 0x00 相同子序：（不要求连续）
