--- a/content/posts/00064_树莓派集群——无盘启动树莓派.md
+++ b/content/posts/00064_树莓派集群——无盘启动树莓派.md
@@ -5,11 +5,12 @@ id: 64
 aliases:
   - /blog/64/
 categories:
-    - 树莓派
+  - Raspberry Pi
 tags:
-    - 树莓派
-    - 路由器
-    - NFS
+  - 树莓派
+  - 路由器
+  - NFS
+  - 瞎搞
 ---
 
 最近从同学那里拿到了几个闲置的树莓派，外加一个路由器和一块2T的硬盘，于是乎想用这些派来搭建一个简单的集群。但是发现SD卡实在是不够，遂尝试使用nfs的方式来启动树莓派。
