--- a/content/posts/00013_HDU 1166 敌兵布阵——线段树，树状数组.md
+++ b/content/posts/00013_HDU 1166 敌兵布阵——线段树，树状数组.md
@@ -4,9 +4,10 @@ id: 13
 aliases:
   - /blog/13/
 categories:
-  - 算法
+  - Algorithm
 date: 2018-02-06T17:33:38+08:00
 tags:
+  - 线段树
 ---
 
 这题本来我打算用前缀数组实现源数据的处理，并把更变用map<int ,int>实现，发现后来还是超时了；
