--- a/content/posts/00019_HYSBZ 1216 [HNOI2003]操作系统.md
+++ b/content/posts/00019_HYSBZ 1216 [HNOI2003]操作系统.md
@@ -4,9 +4,10 @@ id: 19
 aliases:
   - /blog/19/
 categories:
-  - 算法
+  - Algorithm
 date: 2018-02-07T23:27:09+08:00
 tags:
+  - HYSBZ
 ---
 
 [题目链接](http://www.lydsy.com/JudgeOnline/problem.php?id=1216)
