--- a/content/posts/00028_最长递增子列的另一种思路（转化为LCS问题）.md
+++ b/content/posts/00028_最长递增子列的另一种思路（转化为LCS问题）.md
@@ -4,9 +4,10 @@ id: 28
 aliases:
   - /blog/28/
 categories:
-  - 算法
+  - Algorithm
 date: 2018-02-06T21:11:32+08:00
 tags:
+  - LCS
 ---
 
 ## 利用LCS的解题思路可以解决最长递增子列的问题顺便求出该递增序列
