dn42: change from sjc1 to phx1
Signed-off-by: imlk <me@imlk.top>

--- a/content/dn42.md
+++ b/content/dn42.md
@@ -5,12 +5,12 @@ title: See you on DN42 network
 Hello，我是`AS4242421742`，目前有以下节点，欢迎与我peer
 
 ```
-👉 sjc1-us:
+👉 phx1-us:
 DN42 ip address:
 - 172.22.96.2/26
 - fd42:d2aa:8a0e::2/48
 wireguard:
-- public ip & port: sjc1.us.dn42.imlk.top:2<your last 4-digit ASN>
+- public ip & port: phx1.us.dn42.imlk.top:2<your last 4-digit ASN>
 - public key: 34s2HSa76GP/lfFjZsh0uhJly8rUXWl2JgO47BJsj2Q=
 - link-local IPv6 address: fe80::1742/64
 bird:
